<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_detail">Movie details</string>
    <string name="most_popular_menu_item">Show most popular</string>
    <string name="highest_rated">Show highest rated</string>
    <string name="overview">Overview</string>
    <string name="movie_load_error">Cannot load movie details. Try again.</string>
    <string name="no_internet_connection">No internet connection available!</string>
    <string name="movie_header_image_descriptor">Movie image</string>
    <string name="movie_poster_image_descriptor">Movie poster</string>
    <string name="trailers">Trailers</string>
    <string name="favourite_menu_item">Show favourite</string>
    <string name="reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="no_reviews_available">Reviews list is empty :(</string>
</resources>
