<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:contentDescription="@string/movie_header_image_descriptor"
                android:id="@+id/header_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax"/>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_margin"
                android:layout_marginRight="@dimen/big_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/cover_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_margin"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:contentDescription="@string/movie_poster_image_descriptor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="H,9:13"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"/>

                    <TextView
                        android:id="@+id/release_date"
                        style="@style/TextViewWithDrawable"
                        android:drawableLeft="@drawable/ic_date_range_black_24dp"
                        app:layout_constraintBottom_toTopOf="@+id/original_language"
                        app:layout_constraintStart_toEndOf="@+id/cover_iv"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="2017.08.09"/>


                    <TextView
                        android:id="@+id/original_language"
                        style="@style/TextViewWithDrawable"
                        android:drawableLeft="@drawable/ic_language_black_24dp"
                        app:layout_constraintBottom_toTopOf="@+id/number_of_votes"
                        app:layout_constraintStart_toEndOf="@+id/cover_iv"
                        app:layout_constraintTop_toBottomOf="@+id/release_date"
                        tools:text="EN"/>

                    <TextView
                        android:id="@+id/number_of_votes"
                        style="@style/TextViewWithDrawable"
                        android:drawableLeft="@drawable/ic_chat_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cover_iv"
                        app:layout_constraintTop_toBottomOf="@+id/original_language"
                        tools:text="8763"/>

                    <TextView
                        android:id="@+id/avg_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/release_date"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="7.5"/>
                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"

                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:text="@string/overview"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <TextView
                        android:id="@+id/description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/big_margin"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"

                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:text="@string/trailers"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trailers_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="horizontal"
                        android:orientation="horizontal">

                    </android.support.v7.widget.RecyclerView>
                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/big_margin"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/no_reviews_available" />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"

                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/reviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginTop="@dimen/big_margin"
                        android:text="@string/reviews"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviews_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal">


                    </android.support.v7.widget.RecyclerView>
                    <TextView
                        android:id="@+id/empty_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/big_margin"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/no_reviews_available" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>